force-app/main/default/objects/TFM_Purpose_Code_Mappings__mdt/TFM_Purpose_Code_Mappings__mdt.object-meta.xml
<CustomObject>
    <label>TFM Purpose Code Mappings</label>
    <pluralLabel>TFM Purpose Code Mappings</pluralLabel>
</CustomObject>