force-app/main/default/objects/TFM_Purpose_Code_Mappings__mdt/fields/Accounts_DataScope_Subtext__c.field-meta.xml
<CustomField>
    <fullName>Accounts_DataScope_Subtext__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <label>Accounts DataScope Subtext</label>
    <type>TextArea</type>
</CustomField>