force-app/main/default/objects/TFM_Purpose_Code_Mappings__mdt/fields/Archived_Description__c.field-meta.xml
<CustomField>
    <fullName>Archived_Description__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <label>Archived Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>