force-app/main/default/objects/TFM_Purpose_Code_Mappings__mdt/fields/Dashboard_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Purpose__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <label>Dashboard Purpose</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>