force-app/main/default/objects/TFM_Purpose_Code_Mappings__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Purpose Description for Active Consent</description>
    <label>Active Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>