force-app/main/default/objects/TFM_Purpose_Code_Mappings__mdt/fields/PurposeCollection__c.field-meta.xml
<CustomField>
    <fullName>PurposeCollection__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Collection of the purpose</description>
    <label>Purpose Collection</label>
    <type>TextArea</type>
</CustomField>