force-app/main/default/objects/TFM_Purpose_Code_Mappings__mdt/fields/SharingPurpose__c.field-meta.xml
<CustomField>
    <fullName>SharingPurpose__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Sharing of the purpose</description>
    <label>Sharing Purpose</label>
    <type>TextArea</type>
</CustomField>