force-app/main/default/objects/TFM_Purpose_Code_Mappings__mdt/fields/Transactions_DataScope_SubText__c.field-meta.xml
<CustomField>
    <fullName>Transactions_DataScope_SubText__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <label>Transactions DataScope SubText</label>
    <type>TextArea</type>
</CustomField>