force-app/main/default/objects/TFM_Purpose_Code_Mappings__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Description__c</columns>
    <columns>Archived_Description__c</columns>
    <columns>PurposeCollection__c</columns>
    <columns>SharingPurpose__c</columns>
    <columns>Dashboard_Purpose__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>